# grind

./: .gitignore  Cargo.toml  README.md  architecture.txt  context_opengl.txt  create_symlinks.sh  diagram.mermaidjs  mkdocs.yml  test.py
docs/: index.md
docs/egl/: egl_get_config.md
docs/research/: display.md  display_server.md  glcontext.md  ideas.md  sdl.md  test.md
glsl-transpiler/: Cargo.toml
glsl-transpiler/src/: lib.rs
grind-egl/: Cargo.toml  build.rs
grind-egl/src/: lib.rs
grind-kernel/: Cargo.toml
grind-kernel/src/: lib.rs
grind-kernel/src/egl/: config.rs  context.rs  display.rs  entrypoint.rs  global.rs  mod.rs  surface.rs  types.rs  wayland.rs
grind-kernel/src/egl/platform/: wayland.rs
grind-kernel/src/kernel/: mod.rs
grind-kernel/src/kernel/vulkan/: buffer.rs  context.rs  manager.rs  mod.rs  renderer.rs  shader.rs  vulkancontext.rs  vulkanobject.rs
grind-kernel/src/opengl/: entrypoint.rs  global.rs  mod.rs  types.rs
grind-kernel/src/opengl/gles2/: buffer.rs  mod.rs  shader.rs  util.rs
grind-opengles2/: Cargo.toml
grind-opengles2/src/: lib.rs
grind-test/: Cargo.toml  README.md  test.frag  test.vert
grind-test/grindtest/: test_egl.py
grind-test/grindtest/wrapper/: egl.h  egl.py
grind-test/src/: lib.rs  utils.rs
grind-test/tests/: opengles2_test.rs
grind-wayland-egl/: Cargo.toml
grind-wayland-egl/src/: lib.rs
proxy_egl/: Cargo.toml
proxy_egl/src/egl/: mod.rs
spirv-parser/: Cargo.toml
spirv-parser/src/: descriptor_sets.rs  entry_point.rs  lib.rs  parse.rs  spec_consts.rs  structs.rs
src/: egl.rs  lib.rs  modu.rs
