[package]
name        = "grind-kernel"
version     = "0.1.0"
authors     = ["Bevilacqua Jean-Sebastien <realitix@gmail.com>"]
publish     = false
description = "OpenGL X to Vulkan"
readme      = "README.md"

[lib]
name        = "grindkernel"
crate-type  = ["staticlib", "cdylib"]

[features]
egl = []

[dependencies]
