[package]
name = "grind-egl"
version = "0.1.0"
authors = ["Jean-Sebastien BEVILACQUA <realitix@gmail.com>", "Robert KING"]
publish = false
description = "EGL proxy for Grind"

[lib]
name = "EGL"
crate-type = ["cdylib"]

[dependencies]
grind-kernel = { path = "../grind-kernel" }
khronos = "*"
libc = "*"
