[package]
name = "grind-kernel"
version = "0.1.0"
authors = ["Jean-Sebastien BEVILACQUA <realitix@gmail.com>", "Robert KING"]
publish = false
description = "The Kernel of GRIND"

[lib]
name = "grindkernel"
crate-type = ["cdylib"]

[dependencies]
khronos = "*"
libc = "*"
lazy_static = "*"
vulkano = "*"
vulkano-shaders = "*"
glsltranspiler = { path = "../glsl-transpiler" }
spirvparser = { path = "../spirv-parser" }
shaderc = { path = "../../shaderc-rs" }
