[package]
name = "grind-kernel"
version = "0.1.0"
authors = ["Jean-Sebastien BEVILACQUA <realitix@gmail.com>", "Robert KING"]
publish = false
description = "The Kernel of GRIND"

[lib]
name = "grindkernel"
crate-type = ["cdylib"]

[dependencies]
khronos = "*"
libc = "*"
lazy_static = "*"
vulkano = { git = "https://github.com/vulkano-rs/vulkano.git" }
glsltranspiler = { path = "../glsl-transpiler" }
spirvparser = { path = "../spirv-parser" }
shaderc = { git = "https://github.com/google/shaderc-rs.git" }
