[package]
name = "grind-kernel"
version = "0.1.0"
authors = ["Jean-Sebastien BEVILACQUA <realitix@gmail.com>"]
publish = false
description = "The Kernel of GRIND"

[lib]
name = "grindkernel"
crate-type = ["cdylib"]

[dependencies]
khronos = "*"
libc = "*"
lazy_static = "*"
ash = "0.27.1"
glsltranspiler = { path = "../glsl-transpiler" }
spirvparser = { path = "../spirv-parser" }
shaderc = { git = "https://github.com/google/shaderc-rs.git" }
