[package]
name = "grind-opengles2"
version = "0.1.0"
authors = ["Jean-Sebastien BEVILACQUA <realitix@gmail.com>", "Robert KING"]
publish = false
description = "OpenGLES2 proxy for Grind"

[lib]
name = "GLESv2"
crate-type = ["cdylib"]

[dependencies]
grind-kernel = { path = "../grind-kernel" }
khronos = "*"
libc = "*"
