[package]
name = "grind-test"
version = "0.1.0"
authors = ["Jean-Sebastien BEVILACQUA <realitix@gmail.com>"]
publish = false
description = "The Test of GRIND"

[lib]
name = "grindtest"
crate-type = ["lib"]

[dev-dependencies]
egl-rs = { path = "../../egl-rs" }
opengles2-rs = { path = "../../opengles2-rs" }
wayland-client = "*"
image = "*"