[package]
name = "grind-test"
version = "0.1.0"
authors = ["Jean-Sebastien BEVILACQUA <realitix@gmail.com>"]
publish = false
description = "The Test of GRIND"

[lib]
name = "grindtest"
crate-type = ["lib"]

[dependencies]
egl-rs = { git = "https://github.com/realitix/egl-rs.git" }
opengles2-rs = { git = "https://github.com/realitix/opengles2-rs.git" }
image = "*"
wayland-client = "0.20.12"